# Practice_In_Cpp

./: LICENSE  Readme.md
Case_Sensitive/: CMakeLists.txt  Readme.md
Case_Sensitive/Case_Sensitive/: CMakeLists.txt  Case_Sensitive.cpp  Case_Sensitive.h
Dominant_element/: CMakeLists.txt  Readme.md
Dominant_element/Dominant_element/: CMakeLists.txt  Dominant_element.cpp  Dominant_element.h
Driving_School/: CMakeLists.txt  Readme.md
Driving_School/Driving_School/: CMakeLists.txt  Driving_School.cpp  Driving_School.h
Number_Decending/: CMakeLists.txt  Readme.md
Number_Decending/Number_Decending/: CMakeLists.txt  Number_Decending.cpp  Number_Decending.h
Practice2/: CMakeLists.txt  Readme.md
Practice2/Practice2/: CMakeLists.txt  Practice2.cpp  Practice2.h
PracticeOfC++/: CMakeLists.txt  Readme.md
PracticeOfC++/PracticeOfC++/: CMakeLists.txt  PracticeOfC++.cpp  PracticeOfC++.h
Practive_Shorted_Words/: CMakeLists.txt  Readme.md
Practive_Shorted_Words/Practive_Shorted_Words/: CMakeLists.txt  Practive_Shorted_Words.cpp  Practive_Shorted_Words.h
Weight_Content/: CMakeLists.txt  Readme.md
Weight_Content/Weight_Content/: CMakeLists.txt  Weight_Content.cpp  Weight_Content.h
practice_recursive/: CMakeLists.txt  README.md
practice_recursive/practice_recursive/: CMakeLists.txt  practice_recursive.cpp  practice_recursive.h
reversal_equation/: .gitignore  CMakeLists.txt  Readme.md
reversal_equation/reversal_equation/: CMakeLists.txt  reversal_equation.cpp  reversal_equation.h
